// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question type changer component should render correctly empty 1`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;

exports[`Question type changer component should render correctly image preview checkbox 1`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;

exports[`Question type changer component should render correctly multiple answers checkbox 1`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={true}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;

exports[`Question type changer component should render correctly multiple answers checkbox 2`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={true}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;

exports[`Question type changer component should render correctly open option checkbox 1`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={true}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;

exports[`Question type changer component should render correctly options as images checkbox 1`] = `
<div
  className="sc-bdVaJa gDFFRw"
  wrap="true"
>
  <WithStyles
    row={true}
    style={
      Object {
        "paddingLeft": 14,
      }
    }
  >
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={undefined}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
    <WithStyles
      control={
        <WithStyles
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "marginRight": 10,
              "whiteSpace": "nowrap",
              "width": "auto",
            }
          }
        />
      }
    />
  </WithStyles>
</div>
`;
